# plugadvpl

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  cliff.toml  index.html
.claude-plugin/: marketplace.json  plugin.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  parser_issue.md
.github/workflows/: ci.yml  release-prepare.yml  release-rc.yml  release.yml
agents/: advpl-analyzer.md  advpl-code-generator.md  advpl-impact-analyzer.md  advpl-reviewer-bot.md
cli/: README.md  pyproject.toml
cli/plugadvpl/: __init__.py  __main__.py  cli.py  db.py  ingest.py  ingest_sx.py  output.py  query.py  scan.py
cli/plugadvpl/lookups/: execauto_routines.json  funcoes_nativas.json  funcoes_restritas.json  lint_rules.json  modulos_erp.json  pontos_entrada_padrao.json  sql_macros.json
cli/plugadvpl/migrations/: 001_initial.sql  002_universo2_sx.sql  003_lint_rules_status.sql  004_consultas_pk_with_tipo.sql  005_universo3_execution_triggers.sql  006_universo3_execauto_calls.sql  007_universo3_protheus_docs.sql  008_universo3_funcao_indexes.sql
cli/plugadvpl/parsing/: execauto.py  lint.py  parser.py  protheus_doc.py  stripper.py  sx_csv.py  triggers.py
cli/tests/bench/: test_ingest_perf.py  test_sx_ingest_perf.py
cli/tests/e2e_local/: test_e2e_local_ingest.py  test_ingest_sx_real.py
cli/tests/fixtures/sx_synthetic/: six.csv  sx1.csv  sx2.csv  sx3.csv  sx5.csv  sx6.csv  sx7.csv  sx9.csv  sxa.csv  sxb.csv  sxb_with_collisions.csv  sxg.csv
cli/tests/fixtures/synthetic/: _generate.py  classic_browse.prw  corrupted.bak  encoding_cp1252.prw  encoding_utf8.prw  exec_auto.prw  http_outbound.prw  job_rpc.prw  multi_filial.prw  mvc_complete.prw  mvc_hooks.prw  pe_paramixb.prw  pe_simple.prw  pubvars.prw  reclock_alias_dup_trigger.prw  reclock_pattern.prw  reclock_unbalanced.prw  sql_embedded.prw  tlpp_namespace.tlpp  ws_rest.tlpp  ws_restful_classic.prw  ws_soap.prw
cli/tests/integration/: test_cli.py  test_ingest.py  test_ingest_sx.py
cli/tests/unit/: test_db.py  test_execauto.py  test_lint.py  test_lint_catalog_consistency.py  test_output.py  test_parser.py  test_parser_snapshots.py  test_protheus_doc.py  test_query.py  test_scan.py  test_stripper.py  test_triggers.py
cli/tests/unit/__snapshots__/: test_parser_snapshots.ambr
dev/bench/: data.js
docs/: FAQ.md  ROADMAP.md  architecture.md  cli-reference.md  limitations.md  pypi-setup.md  schema.md  troubleshooting.md
docs/marketing/: build-pdf.ps1  linkedin-v04-carousel.html  linkedin-v04-carousel.md
docs/universo3/: A-workflow-schedule.md  B-execauto-chain.md  C-protheus-doc.md
gaps/: PLUGADVPL_LINT_AUDIT_V4.md  PLUGADVPL_QA_REPORT copy.md  PLUGADVPL_QA_REPORT.md  PLUGADVPL_QA_REPORT_V2.md  PLUGADVPL_QA_REPORT_V3.md
hooks/: README.md  hooks.json  session-start.mjs
scripts/: bump_marketplace_version.py  extract_lookups.py  install.ps1  install.sh  validate_plugin.py
skills/advpl-advanced/: SKILL.md
skills/advpl-code-review/: SKILL.md
skills/advpl-debugging/: SKILL.md
skills/advpl-dicionario-sx/: SKILL.md
skills/advpl-dicionario-sx-validacoes/: SKILL.md
skills/advpl-embedded-sql/: SKILL.md
skills/advpl-encoding/: SKILL.md
skills/advpl-fundamentals/: SKILL.md
skills/advpl-jobs-rpc/: SKILL.md
skills/advpl-matxfis/: SKILL.md
skills/advpl-mvc/: SKILL.md
skills/advpl-mvc-avancado/: SKILL.md
skills/advpl-pontos-entrada/: SKILL.md
skills/advpl-refactoring/: SKILL.md
skills/advpl-tlpp/: SKILL.md
skills/advpl-web/: SKILL.md
skills/advpl-webservice/: SKILL.md
skills/arch/: SKILL.md
skills/callees/: SKILL.md
skills/callers/: SKILL.md
skills/docs/: SKILL.md
skills/doctor/: SKILL.md
skills/execauto/: SKILL.md
skills/find/: SKILL.md
skills/gatilho/: SKILL.md
skills/grep/: SKILL.md
(+17 files in other folders)
