[project]
name = "plugadvpl"
dynamic = ["version"]
description = "CLI que indexa fontes ADVPL/Protheus em SQLite com FTS5 para análise por LLM (companheiro do plugin Claude Code plugadvpl)"
readme = "README.md"
# License file lives in monorepo root (see ../LICENSE). PEP 639 SPDX expression below is the canonical declaration.
license = "MIT"
authors = [{ name = "JoniPraia", email = "jonipraiaoficial@gmail.com" }]
requires-python = ">=3.11"
keywords = ["advpl", "tlpp", "protheus", "totvs", "sqlite", "fts5", "claude-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Code Generators",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer >=0.15",
    "rich >=13.7",
    "chardet >=5.0",
    "psutil >=5.9",
]

[project.urls]
Homepage = "https://github.com/JoniPraia/plugadvpl"
Issues = "https://github.com/JoniPraia/plugadvpl/issues"
Source = "https://github.com/JoniPraia/plugadvpl"
Changelog = "https://github.com/JoniPraia/plugadvpl/blob/main/CHANGELOG.md"

[project.scripts]
plugadvpl = "plugadvpl.cli:main"

[dependency-groups]
dev = [
    "pytest >=8.0",
    "pytest-benchmark >=5.0",
    "pytest-cov >=5.0",
    "hypothesis >=6.100",
    "syrupy >=4.0",
    "ruff >=0.6",
    "mypy >=1.10",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { root = ".." }

[tool.hatch.build.hooks.vcs]
version-file = "plugadvpl/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["plugadvpl"]
# Hatchling inclui automaticamente todos arquivos non-Python dentro do package
# (migrations/*.sql, lookups/*.json). NÃO usar force-include aqui — ele
# duplicaria os arquivos no wheel (gerando "Duplicate filename in local headers"
# rejeitado pelo PyPI).

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["plugadvpl/_version.py"]  # auto-gerado por hatch-vcs

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF",
    "PTH",   # use pathlib em vez de os.path
    "RET",   # return values consistentes
    "ARG",   # unused arguments
    "TCH",   # imports apenas para type-checking → mover para TYPE_CHECKING block
    "PL",    # pylint subset (refactor, warnings, conventions)
]
ignore = ["E501", "PLR0913"]  # line-length pelo formatter; PLR0913=too-many-args (CLI tem flags demais por design)

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "PLC0415",  # imports inside functions are OK in tests (TDD pattern)
    "PLR2004",  # magic values in assertions are OK
    "TC002",    # type-only imports for monkeypatch.MonkeyPatch is fine
    "TC003",    # type-only imports for pathlib.Path in fixtures is fine
    "RUF059",   # unused unpacked variable in tests (`content, _enc = ...`) is fine
]

[tool.ruff.format]
docstring-code-format = true   # formata exemplos de código dentro de docstrings

[tool.mypy]
strict = true
python_version = "3.11"
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
enable_error_code = ["redundant-expr", "truthy-bool", "ignore-without-code"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-m", "not local",
    "--strict-markers",
    "--cov=plugadvpl",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=xml",   # para Codecov upload em CI
]
markers = [
    "local: testes que precisam de fixtures locais não distribuídas. Excluídos em CI. Veja CONTRIBUTING.md.",
    "slow: testes que demoram >1s. Rodar com -m slow para incluir.",
]
